// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ProfilePage 1`] = `
<div
  className="container container--body"
>
  <div
    className="grid grid--profile"
  >
    <img
      className="grid--profile__img"
    />
    <div
      className="grid--profile__name"
    />
    <div />
    <div />
    <div />
    <div>
       yrs
    </div>
    <div />
    <div />
    <div />
    <div>
       lbs
    </div>
    <h4
      className="grid--profile__features-key"
      key="0"
    >
      Languages
    </h4>
    <h4
      className="grid--profile__features-key"
      key="1"
    >
      Feats
    </h4>
    <h4
      className="grid--profile__features-key"
      key="2"
    >
      Special Abilities
    </h4>
    <h4
      className="grid--profile__features-key"
      key="3"
    >
      School
    </h4>
    <h4
      className="grid--profile__features-key"
      key="4"
    >
      Prohibited Schools
    </h4>
    <h4
      className="grid--profile__features-key"
      key="5"
    >
      Deity
    </h4>
    <div
      className="grid--profile__features-value"
      key="0"
    />
    <div
      className="grid--profile__features-value"
      key="1"
    />
    <div
      className="grid--profile__features-value"
      key="2"
    />
    <div
      className="grid--profile__features-value"
      key="3"
    />
    <div
      className="grid--profile__features-value"
      key="4"
    />
    <div
      className="grid--profile__features-value"
      key="5"
    />
  </div>
</div>
`;

exports[`should render ProfilePage with profile data 1`] = `
<div
  className="container container--body"
>
  <div
    className="grid grid--profile"
  >
    <img
      className="grid--profile__img"
    />
    <div
      className="grid--profile__name"
    >
      Istvyll Bannianea
    </div>
    <div />
    <div />
    <div />
    <div>
       yrs
    </div>
    <div>
      Lawful Evil
    </div>
    <div />
    <div />
    <div>
       lbs
    </div>
    <h4
      className="grid--profile__features-key"
      key="0"
    >
      Languages
    </h4>
    <h4
      className="grid--profile__features-key"
      key="1"
    >
      Feats
    </h4>
    <h4
      className="grid--profile__features-key"
      key="2"
    >
      Special Abilities
    </h4>
    <h4
      className="grid--profile__features-key"
      key="3"
    >
      School
    </h4>
    <h4
      className="grid--profile__features-key"
      key="4"
    >
      Prohibited Schools
    </h4>
    <h4
      className="grid--profile__features-key"
      key="5"
    >
      Deity
    </h4>
    <div
      className="grid--profile__features-value"
      key="0"
    >
      Common, Elven, Draconic, Orc, Sylvan
    </div>
    <div
      className="grid--profile__features-value"
      key="1"
    />
    <div
      className="grid--profile__features-value"
      key="2"
    />
    <div
      className="grid--profile__features-value"
      key="3"
    >
      Transmutation
    </div>
    <div
      className="grid--profile__features-value"
      key="4"
    >
      Illusion, Necromancy
    </div>
    <div
      className="grid--profile__features-value"
      key="5"
    />
  </div>
</div>
`;
